@@ -29,6 +29,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Locale;
@@ -245,7 +246,7 @@ final class KarelModel {
 //        Storage.getDefault().put("town", TownModel.toJSON(m.getScratch().getTown()));
 //    }
 
-    private static final Set<String> MANUAL_COMMANDS = Set.of("STEP", "LEFT");
+    private static final Set<String> MANUAL_COMMANDS = new HashSet<>(Arrays.asLists("STEP", "LEFT"));
 
     private static void refreshCommands(Karel m, boolean select) {
         Procedure selectedProc = findWorkspace(m).getSelectedProcedure();
